// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList ButtonList should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <FlatList
      data={
        Array [
          Object {
            "button": Object {
              "external": 0,
              "target": "",
              "text": "Girl",
              "title": "Girl",
              "url": "/girl",
            },
            "image": Object {
              "alt": "Girl",
              "crop_d": "",
              "crop_m": "",
              "crop_t": "",
              "title": "Girl",
              "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
            },
          },
          Object {
            "button": Object {
              "external": 0,
              "target": "",
              "text": "Toddler Girl",
              "title": "Toddler Girl",
              "url": "/toddler-girl",
            },
            "image": Object {
              "alt": "Toddler Girl alt",
              "crop_d": "",
              "crop_m": "",
              "crop_t": "",
              "title": "Toddler Girl title",
              "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
            },
          },
          Object {
            "button": Object {
              "external": 0,
              "target": "",
              "text": "Boy",
              "title": "Boy",
              "url": "/c/boy",
            },
            "image": Object {
              "alt": "Boy",
              "crop_d": "",
              "crop_m": "",
              "crop_t": "",
              "title": "Boy",
              "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
            },
          },
          Object {
            "button": Object {
              "external": 0,
              "target": "",
              "text": "Toddler Boy",
              "title": "Tod Boy",
              "url": "/c/",
            },
            "image": Object {
              "alt": "Toddler Boy alt",
              "crop_d": "",
              "crop_m": "",
              "crop_t": "",
              "title": "Tod Boy title",
              "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
            },
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={2}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <Styled(CustomButton)
      accessibilityLabel="Baby"
      accessibilityRole="button"
      buttonVariation="cautionary-button"
      color="red"
      customStyle={Object {}}
      disableButton={false}
      fullWidth=""
      locator=""
      style={
        Object {
          "width": 750,
        }
      }
      text="Baby"
      url="/c/"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 2`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
          "image": Object {
            "alt": "Toddler Girl alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Toddler Girl title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/c/boy",
          },
          "image": Object {
            "alt": "Boy",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Boy",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/c/",
          },
          "image": Object {
            "alt": "Toddler Boy alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Tod Boy title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/c/",
          },
          "image": Object {
            "alt": "Baby Alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Baby title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;
